@@ -336,27 +336,6 @@ missing and empty values, missing values will be normalized to an empty string.
 
 Short aliases for a few request meta-variables.
 
-=head2 header
-
-  my $value = $cgi->header('Accept');
-
-Retrieve the value of a request header by name (case insensitive). CGI request
-headers can only contain a single value, which may be combined from multiple
-values.
-
-=head2 header_names
-
-  my $arrayref = $cgi->header_names;
-
-Array reference of available request header names, in lowercase.
-
-=head2 headers
-
-  my $hashref = $cgi->headers;
-
-Hash reference of available request header names and values. Header names are
-represented in lowercase.
-
 =head2 query_pairs
 
   my $pairs = $cgi->query_pairs;
@@ -384,6 +363,21 @@ get multiple values of a parameter.
   my $arrayref = $cgi->query_param_array('foo');
 
 Retrieve values of a named URL query string parameter as an array reference.
+
+=head2 headers
+
+  my $hashref = $cgi->headers;
+
+Hash reference of available request header names and values. Header names are
+represented in lowercase.
+
+=head2 header
+
+  my $value = $cgi->header('Accept');
+
+Retrieve the value of a request header by name (case insensitive). CGI request
+headers can only contain a single value, which may be combined from multiple
+values.
 
 =head2 body
 
