@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Remove header_names method
 
 0.001     2021-04-19 00:43:20 EDT
   - First release
